# patty

./: Cargo.toml  README.md
.github/workflows/: lint.yml  test.yml
examples/: add.rs  append.rs  custom.rs  get.rs  remove.rs  simple.rs  win_admin.rs
src/: lib.rs  test.rs  utils.rs  windows.rs
src/unix/: mod.rs
src/unix/shell/: bash.rs  fish.rs  mod.rs  posix.rs  zsh.rs
src/unix/shell/template/: env.fish  env.sh
