[package]
name = "patty"
version = "0.1.0"
edition = "2021"
authors = ["thewh1teagle"]
homepage = "https://github.com/thewh1teagle/patty"
license = "MIT"
keywords = ["path", "cross-platform", "system", "env"]
description = "Cross platform system PATH manager."
repository = "https://github.com/thewh1teagle/patty"

[dependencies]
eyre = "0.6.12"
log = "0.4.21"

[target."cfg(windows)".dependencies]
winreg = "0.52.0"
windows = { version = "0.56.0", features = [
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
serial_test = "3.1.1"
